--- a/templates/run.sh.j2
+++ b/templates/run.sh.j2
@@ -13,5 +13,6 @@ cd /home/{{ ansible_user }}/{{ item.project }}/
 git pull
 
 echo "Running benchmarks"
-asv --config=/home/{{ ansible_user }}/{{ item.project }}/{{ item.asv_config }} run NEW
+# initial run, to ensure we have at least one in the results set
+asv --config=/home/{{ ansible_user }}/{{ item.project }}/{{ item.asv_config }} run HEAD~5..HEAD --skip-existing
 asv --config=/home/{{ ansible_user }}/{{ item.project }}/{{ item.asv_config }} gh-pages --no-push
