--- a/templates/airflow-supervisord-conf.j2
+++ b/templates/airflow-supervisord-conf.j2
@@ -7,7 +7,7 @@ stopasgroup=true
 user={{ ansible_user }}
 stdout_logfile=/home/{{ ansible_user }}/airflow/logs/airflow-stdout.log
 stderr_logfile=/home/{{ ansible_user }}/airflow/logs/airflow-stderr.log
-environment=PATH="/home/{{ ansible_user }}/miniconda/bin:%(ENV_PATH)s",USER="{{ ansible_user }}",HOME="/home/{{ ansible_user }}/"
+environment=PATH="/home/{{ ansible_user }}/miniconda3/bin:%(ENV_PATH)s",USER="{{ ansible_user }}",HOME="/home/{{ ansible_user }}/"
 
 
 [program:airflowscheduler]
@@ -19,4 +19,4 @@ user={{ ansible_user }}
 stdout_logfile=/home/{{ ansible_user }}/airflow/logs/airflow-scheduler-stdout.log
 stderr_logfile=/home/{{ ansible_user }}/airflow/logs/airflow-scheduler-stderr.log
 autorestart=true
-environment=PATH="/home/{{ ansible_user }}/miniconda/bin:%(ENV_PATH)s",USER="{{ ansible_user }}",HOME="/home/{{ ansible_user }}/"
+environment=PATH="/home/{{ ansible_user }}/miniconda3/bin:%(ENV_PATH)s",USER="{{ ansible_user }}",HOME="/home/{{ ansible_user }}/"
